codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_cached_limits_hide_credits_without_flag.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.93.0)                                  │
│                                                             │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新的    │
│ 速率限制与积分信息                                          │
│                                                             │
│  模型:         gpt-5.1-codex (推理 无, 摘要 自动)           │
│  目录: [[workspace]]                                        │
│  审批:         on-request                                   │
│  沙箱:         只读                                         │
│  Agents.md:    无                                           │
│                                                             │
│  Token 用量:   1.05K 总计  (700 输入 + 350 输出)            │
│  上下文窗口:   剩余 100% (1.45K 已用 / 272K)                │
│  5小时 限额:   [████████░░░░░░░░░░░░] 剩余 40% (11:32 重置) │
│  每周 限额:    [█████████████░░░░░░░] 剩余 65% (11:52 重置) │
│  提示:         限额可能已过期 - 发起新回合刷新。            │
╰─────────────────────────────────────────────────────────────╯
