codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.97.0)                                  │
│                                                             │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新的    │
│ 速率限制与积分信息                                          │
│                                                             │
│  模型:         gpt-5.1-codex (推理 无, 摘要 自动)           │
│  目录: [[workspace]]                                        │
│  审批:         on-request                                   │
│  沙箱:         只读                                         │
│  Agents.md:    无                                           │
│                                                             │
│  Token 用量:   2K 总计  (1.4K 输入 + 600 输出)              │
│  上下文窗口:   剩余 100% (2.2K 已用 / 272K)                 │
│  5小时 限额:   [███████████░░░░░░░░░] 剩余 55% (09:25 重置) │
│  每周 限额:    [██████████████░░░░░░] 剩余 70% (09:55 重置) │
│  积分:         38 积分                                      │
╰─────────────────────────────────────────────────────────────╯
