codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.89.0)                                  │
│                                                             │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新的    │
│ 速率限制与积分信息                                          │
│                                                             │
│  模型:         gpt-5.1-codex-max (推理 高, 摘要 详细)       │
│  目录: [[workspace]]                                        │
│  审批:         on-request                                   │
│  沙箱:         工作区可写                                   │
│  Agents.md:    无                                           │
│                                                             │
│  Token 用量:   1.9K 总计  (1K 输入 + 900 输出)              │
│  上下文窗口:   剩余 100% (2.25K 已用 / 272K)                │
│  5小时 限额:   [██████░░░░░░░░░░░░░░] 剩余 28% (03:14 重置) │
│  每周 限额:    [███████████░░░░░░░░░] 剩余 55% (03:24 重置) │
╰─────────────────────────────────────────────────────────────╯
