codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_missing_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.97.0)                               │
│                                                          │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新的 │
│ 速率限制与积分信息                                       │
│                                                          │
│  模型:         gpt-5.1-codex-max (推理 无, 摘要 自动)    │
│  目录: [[workspace]]                                     │
│  审批:         on-request                                │
│  沙箱:         只读                                      │
│  Agents.md:    无                                        │
│                                                          │
│  Token 用量:   750 总计  (500 输入 + 250 输出)           │
│  上下文窗口:   剩余 100% (750 已用 / 272K)               │
│  限额:         数据暂不可用                              │
╰──────────────────────────────────────────────────────────╯
